--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "stripe-js",
-  "version": "0.0.1-beta",
-  "description": "An unofficial stripe-sdk for workers.dev and environments that use fetch",
-  "main": "stripe.js",
-  "scripts": {
-    "build": "webpack",
-    "dev": "NODE_ENV=development npm run build",
-    "format": "prettier --write '**/*.{ts,js,css,json,md}'",
-    "test:clean": "rimraf ./transpiled/src ./transpiled/test",
-    "test": "npm run test:clean && npm run transpile && mocha --require source-map-support/register --recursive transpiled/test",
-    "transpile": "tsc --project ./test"
-  },
-  "author": "EduM22",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
-    "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
-  }
+    "name": "stripe-js",
+    "version": "0.0.1-beta",
+    "description": "An unofficial stripe-sdk for workers.dev and environments that use fetch",
+    "main": "./dist/stripe.js",
+    "scripts": {
+        "build": "webpack",
+        "dev": "NODE_ENV=development npm run build",
+        "format": "prettier --write '**/*.{ts,js,css,json,md}'",
+        "test:clean": "rimraf ./transpiled/src ./transpiled/test",
+        "test": "npm run test:clean && npm run transpile && mocha --require source-map-support/register --recursive transpiled/test",
+        "transpile": "tsc --project ./test",
+        "build:types": "tsc -d --declarationDir test/types --declarationMap --emitDeclarationOnly"
+    },
+    "types": "./src/index.d.ts",
+    "author": "EduM22",
+    "license": "Apache-2.0",
+    "devDependencies": {
+        "@types/chai": "^4.2.11",
+        "@types/mocha": "^7.0.2",
+        "chai": "^4.2.0",
+        "mocha": "^8.0.1",
+        "prettier": "^2.0.5",
+        "rimraf": "^3.0.2",
+        "ts-loader": "^7.0.5",
+        "typescript": "^3.9.5",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12"
+    },
+    "dependencies": {
+        "@types/qs": "^6.9.5",
+        "qs": "^6.9.6"
+    }
 }
