--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,17 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist",
-    "module": "commonjs",
-    "target": "esnext",
-    "lib": ["esnext", "webworker"],
-    "alwaysStrict": true,
-    "strict": true,
-    "preserveConstEnums": true,
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "esModuleInterop": true
-  },
-  "include": [
-    "./src/*.ts",
-    "./test/*.ts",
-    "./src/**/*.ts",
-    "./test/**/*.ts"
-  ],
-  "exclude": ["node_modules/", "dist/"]
+    "compilerOptions": {
+        "outDir": "./dist",
+        "module": "ES2020",
+        "target": "ES2020",
+        "lib": ["ES2020", "webworker"],
+        "alwaysStrict": true,
+        "strict": true,
+        "preserveConstEnums": true,
+        "moduleResolution": "classic",
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "declaration": true
+    },
+    "include": ["./src/*.ts", "./test/*.ts", "./src/**/*.ts", "./test/**/*.ts"],
+    "exclude": ["node_modules/", "dist/"]
 }
