--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "alwaysStrict": true,
         "strict": true,
         "preserveConstEnums": true,
-        "moduleResolution": "classic",
+        "moduleResolution": "node",
         "sourceMap": true,
         "esModuleInterop": true,
         "declaration": true
