--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
-
 name: Publish Package
 
 on:
@@ -15,36 +12,22 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 12.x
       - run: yarn
       - run: yarn build
       - run: yarn build:types
-      #- run: yarn test
 
-  publish-gpr:
-    needs: build
+  publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
+          node-version: 12.x
+          registry-url: 'https://npm.pkg.github.com'
+          always-auth: true
       - run: yarn
       - run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.PAT}}
-
-  # publish-npm:
-  # needs: build
-  # runs-on: ubuntu-latest
-  # steps:
-  #   - uses: actions/checkout@v2
-  #   - uses: actions/setup-node@v1
-  #     with:
-  #       node-version: 12
-  #       registry-url: https://registry.npmjs.org/
-  #   - run: yarn
-  #   - run: yarn publish
-  #     env:
-  #       NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
