updated workflow and package.json

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,8 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           always-auth: true
       - run: yarn
+      - run: yarn build
+      - run: yarn build:types
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
