--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "publishConfig": {
         "registry": "https://npm.pkg.github.com"
     },
-    "types": "./src/index.d.ts",
+    "types": "./dist/types/src/index.d.ts",
     "author": "EduM22 <38257387+EduM22@users.noreply.github.com> (https://to.rnqvist.com)",
     "license": "Apache-2.0",
     "devDependencies": {
