--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
         "esModuleInterop": true,
         "declaration": true
     },
-    "include": ["./src/*.ts", "./test/*.ts", "./src/**/*.ts", "./test/**/*.ts"],
+    "include": ["./src/*.ts", "./src/**/*.ts"],
     "exclude": ["node_modules/", "dist/"]
 }
