--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "stripe-workers",
-    "version": "0.9.1-beta",
+    "version": "0.10.0-beta",
     "description": "An unofficial stripe-sdk for workers.dev and environments that use fetch",
     "keywords": [
         "stripe",
@@ -40,10 +40,10 @@
         "ts-node": "^9.1.1",
         "typescript": "^4.2.3",
         "webpack": "^5.27.2",
-        "webpack-cli": "^4.5.0"
-    },
-    "dependencies": {
+        "webpack-cli": "^4.5.0",
         "@types/qs": "^6.9.6",
         "qs": "^6.10.1"
+    },
+    "dependencies": { 
     }
 }
